# corrosionwm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml  rust.yml
src/: input.rs  main.rs  state.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  xdg_shell.rs
