[package]
name = "corrosionwm"
version = "0.1.0"
edition = "2021"

[dependencies]
slog = { version = "2.1.1" }
slog-stdlog = "4.1.0"
bitflags = "1"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
